--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">mvvm-room-retrofit</string>
+    <string name="app_name">Quotify MVVM</string>
+    <string name="page">Page:</string>
 </resources>
